# stibel-init

./: CMakeLists.txt  README.md
cmake/: FunStat.cmake  make_fun_stat.sh  use.md
conf/: config-prod.json  config.json  redis.yml
core/common/include/: BaseResponse.h  Description.h  ErrorCode.h  FunStat.h  HttpResponseUtils.h  RedisDbManager.h  Response2json.h  ResultUtils.h  TimerManager.h
core/common/source/: Description.cpp  ErrorCode.cpp  FunStat.cc  RedisDbManager.cc  TimerManager.cc
core/constants/include/: UserConstant.h
core/controllers/include/: InterfaceController.h  LogController.h  TestChannelController.h  UserController.h
core/controllers/source/: InterfaceController.cc  LogController.cc  TestChannelController.cc  UserController.cc
core/exception/include/: BusinessException.h  ErrorCode.h
core/exception/source/: ErrorCode.cpp
core/filters/include/: LoginFilter.h
core/filters/source/: LoginFilter.cc
core/main/: main.cc
core/models/: model.json
core/models/include/: Interface.h  Log.h  User.h
core/models/source/: Interface.cc  Log.cc  User.cc
core/services/include/: InterfaceService.h  LogService.h  UserService.h
core/services/include/impl/: InterfaceServiceImpl.h  LogServiceImpl.h  UserServiceImpl.h
core/services/include/inner/: CacheService.h  TestChannelService.h
core/services/include/inner/impl/: CacheServiceImpl.h  TestChannelServiceImpl.h
core/services/source/: InterfaceServiceImpl.cc  LogServiceImpl.cc  UserServiceImpl.cc
core/services/source/inner/: CacheServiceImpl.cc  TestChannelServiceImpl.cc
core/utils/include/: HttpResponseUtils.h  InterfaceDescription.h  ResultUtils.h  UserDescription.h
doc/: backend.md  function.md  project.md  功能清单.md  测试用例.xmind
docker/: Dockerfile  build.sh  ldd.md  ldd.sh  run.sh  swd.sh
sql/: initdata.sql  mysql.sql  update.sql
src/common/include/common/: BaseResponse.h  ErrorCode.h  HttpResponseUtils.h  Response2json.h  ResultUtils.h
src/common/src/: ErrorCode.cpp
src/constants/include/constants/: InterfaceConstant.h
src/controllers/include/controllers/: InterfaceController.h  LogController.h  TestChannelController.h  UserController.h
src/controllers/src/: InterfaceController.cc  LogController.cc  UserController.cc
src/exception/include/exception/: BusinessException.h
src/filters/include/filters/: LoginFilter.h
src/filters/src/: LoginFilter.cc
src/main/: main.cc
src/services/include/services/impl/: InterfaceServiceImpl.h  LogServiceImpl.h  UserServiceImpl.h
testcase/common/include/: HttpTest.h  stub_glibc.h
testcase/common/source/: HttpTest.cpp  stub_glibc.cpp
testcase/interface/: CMakeLists.txt
testcase/interface/source/: InterfaceControllerTest.cpp
testcase/json/user/req/register/: Given_checkPassword_Length_Less_than_8_When_register_Then_return_fail.json  Given_normal_user_When_register_Then_success.json
testcase/json/user/resp/: Given_no_login_user_When_query_Then_return_fail_resp.json
testcase/json/user/resp/login/: Given_login_user_When_query_Then_return_success_resp.json
testcase/json/user/resp/register/: Given_Input_Exist_Null_When_register_Then_return_fail_resp.json
testcase/user/: CMakeLists.txt
testcase/user/include/: UserControllerTest.h
testcase/user/json/req/login/: Given_no_exist_user_When_login_Then_return_fail.json
testcase/user/json/req/register/: Given_userAccount_Length_Less_than_4_When_register_Then_return_fail.json  Given_userPassword_Length_Less_than_8_When_register_Then_return_fail.json
testcase/user/json/resp/: Given_no_exist_user_When_login_Then_return_fail_resp.json  Given_userAccount_Length_Less_than_4_When_register_Then_return_fail_resp.json  Given_userPassword_Length_Less_than_8_When_register_Then_return_fail_resp.json  Given_userPassword_checkPassword_not_same_When_register_Then_return_fail_resp.json
testcase/user/source/: UserControllerTest.cpp
(+2 files in other folders)
